tests/e2e/keywords/string_is_keyword.error
Error: syntax error in story at line 1, column 1

1|    string = 1
      ^^^^^^

E0020: `string` is a reserved keyword
